# novatel_oemv

./: CMakeLists.txt  README.md  package.xml
include/novatel_oemv/: SerialDevice.h  novatel_oemv1gl1.h
launch/: gps_conv.launch  novatel_oemv.launch
logs/: rovlog.csv  rovlog.kml  rovlogpdp.csv
msg/: bestposa.msg  bestxyza.msg  ionutca.msg  pdpposa.msg  pdpxyza.msg
src/: Component.cc  SerialDevice.cc  gps_node.cc  novatel_oemv1gl1.cc
